# HireNFire

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  demo.py  huggingface.yaml  inference.py  openenv.yaml  pyproject.toml  requirements.txt
hirenfire/: __init__.py  env.py  generator.py  graders.py  models.py  tasks.py
server/: __init__.py  app.py
