[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hirenfire"
version = "1.1.0"
description = "Bias-Aware AI Hiring Screener with fairness rewards — an OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "jagath-sajjan" }
]
keywords = ["openenv", "hiring", "fairness", "ethics", "reinforcement-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.0",
  "openai>=1.0",
  "gradio>=4.0",
  "pyyaml>=6.0",
  "plotly>=5.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "openenv-core>=0.2.3",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/jagath-sajjan/HireNFire"
Repository = "https://huggingface.co/spaces/jagath-sajjan/HireNFire"

[tool.setuptools.packages.find]
where = ["."]
include = ["hirenfire*", "server*"]

[tool.setuptools.package-data]
hirenfire = ["*.yaml", "*.json"]
